Update to point to validate service at http://validate.spase-group.org.

--- a/site/pages/tools/resource/index.hbs
+++ b/site/pages/tools/resource/index.hbs
@@ -90,8 +90,10 @@ The SPASE resource tools are open source. Source code and additional documentati
 <div class='boxed'>
 <h2>Related Items</h2>
 <ul class='side_nav'>
-	<li><a href="../../services/naming-authority.html">List of Naming Authorities</a></li>
+	<li><a href="{{assets}}/services/naming-authority.html">List of Naming Authorities</a></li>
 	<li><a href="../stylesheet/index.html">XML Stylesheets</a></li>
+	<li><a href="http://validate.spase-group.org/">Metadata Validator</a></li>
+	<li><a href="{{assets}}/tools/editor/index.html">Metadata Editor</a></li>
 </ul>
 </div>
 </aside>
