--- a/site/pages/docs/conventions/index.hbs
+++ b/site/pages/docs/conventions/index.hbs
@@ -26,6 +26,9 @@ title: SPASE Conventions
 	<dt><a href="HDMC-Event-List-Specification-v1.0.3.pdf">Heliophysics Event List (Catalogue) Format</a></dt>
 		<dd>Describes the Heliophysics Event List format which is a plain text data format with metadata embedded in comments.<br/>
 		<a href="sector_boundary_events_std.txt">Text Example</a> - <a href="sector_boundary_events_std.xml">VOTable Example</a></dd>
+	<dt><a href="uri_templates_v1.pdf">URI Template Standard</a></dt>
+		<dd>A specification for special fields which can be included in a URI to capture the file and directory naming 
+		conventions used to access data and images.</dd>
 	</dl>
 	</p>
 </div>
