Fix links on data model base page and base model page."

--- a/site/pages/data/index.hbs
+++ b/site/pages/data/index.hbs
@@ -112,6 +112,7 @@ terms from the SPASE Simulation Extension Dictionary along with terms from the B
 				{{/if}}
 			{{/with}}
 			<a href="model/history.html">History of changes</a><br/>
+			<a href="model/search/index.html" target="_blank">Search Base Model Dictionary</a><br/>
 		</p>
 	  <p>
 			<b><u>Simulation Extensions</u></b><br/>
@@ -127,6 +128,7 @@ terms from the SPASE Simulation Extension Dictionary along with terms from the B
 			{{/with}}
 			
 			<a href="simulation/history.html">History of changes</a><br/>
+			<a href="simulation/search/index.html" target="_blank">Search Simulation Extensions Dictionary</a><br/>
 		</p>
 	</div>
 </aside> <!-- desktop_sidenav -->
