--- a/site/pages/data/model/index.hbs
+++ b/site/pages/data/model/index.hbs
@@ -84,7 +84,7 @@ Related Items
 	<li><a href="search/index.html" target="_blank">Search Base Model Dictionary</a></li>
 	<li><a href="../simulation/index.html">Simulation Extensions Documentation</a></li>
 	<li><a href="../schema/index.html#simulation">Simulation Extensions Schema</a></li>
-	<li><a href="../model/search/index.html" target="_blank">Search Simulation Extensions Dictionary</a></li>
+	<li><a href="../simulation/search/index.html" target="_blank">Search Simulation Extensions Dictionary</a></li>
 </ul>
 </div>
 </aside>
