Change acknowledgement on the SPASE XML Editor page.

--- a/site/pages/tools/editor/index.hbs
+++ b/site/pages/tools/editor/index.hbs
@@ -28,7 +28,7 @@ title: SPASE Editor
      </dl>
    </p>
    <p>
-      This tool was developed by NASA's Virtual Magnetospheric Observatory (VMO) project at UCLA.
+      This tool was developed by NASA's SPASE Metadata Working Team (SWMT).
    <p>
 </div>
 
