--- a/site/pages/data/model/history.hbs
+++ b/site/pages/data/model/history.hbs
@@ -16,27 +16,29 @@ title: SPASE Base Model History
 
 <h1>Dictionary History for Base Model</h1>
 
-
-{{#each (sort baseModelHistory 'updated' true)}}
-	{{#if (isMatch description 'Released.') }}
-		{{#unless @first}}
-		</table>
-		{{/unless}}
-		<h4>Version: <b><a href="search.html?version={{Version}}">{{version}}</a></b></h4>
-		<table class="history">
-			<tr>
-			<th width=100px>Updated</th>
-			<th>Description</th>
-			<th>Notes</th>
-			</tr>
-		{{/if}}
-		<tr {{{color Description}}} >
+{{#each (sort baseModelHistory 'updated' false)}}
+	{{#if (isBreak) }}
+	<h4>Version: <b><a href="search.html?version={{Version}}">{{version}}</a></b></h4>
+	<table class="history">
+		<tr>
+		<th width=100px>Updated</th>
+		<th>Description</th>
+		<th>Notes</th>
+		</tr>
+	{{/if}}
+		<tr {{{color description}}} >
 			<td nowrap>{{updated}}</td>
 			<td><ul>{{{makeList description}}}</ul></td>
 			<td>{{note}}</td>
 		</tr>
+		{{#if (isMatch description 'Released.') }}
+			</table>
+			{{#if (setBreak true)}}{{/if}}
+		{{/if}}
 {{/each}}
+{{#if (isBreak) }}
 	</table>
+{{/if}}
 
 </div>
 
