Updates to history page.

--- a/site/pages/data/model/history.hbs
+++ b/site/pages/data/model/history.hbs
@@ -33,7 +33,7 @@ title: SPASE Base Model History
 		</tr>
 		{{#if (isMatch description 'Released.') }}
 			</table>
-			{{#if (setBreak true)}}{{/if}}
+			{{setBreak true}}
 		{{/if}}
 {{/each}}
 {{#if (isBreak) }}
