--- a/site/pages/connect.hbs
+++ b/site/pages/connect.hbs
@@ -161,6 +161,7 @@ email: hdmc-visualization@googlegroups.com
 <h2>Related Items</h2>
 <ul class='side_nav'>
 	<li><a href="{{assets}}/about.html">About Us</a></li>
+	<li><a href="{{assets}}/spase-inside.html">SPASE Inside</a></li>
 	<li><a href="{{assets}}/news.html">News</a></li>
 </ul>
 </div>
