--- a/site/pages/index.hbs
+++ b/site/pages/index.hbs
@@ -12,6 +12,14 @@ title: SPASE
 <ul class='articles item_list list_view'>
 
 <li>
+<div class='list_content center top_tight'>
+<h3 class='list_title'>Announcements</h3>
+<div>2020-10-15: Version 2.3.2 of the SPASE <a href="data">Base model</a> is released.</div>
+</div>
+</li>
+
+<li>
+<hr>
 <div class='list_content'>
 <div class='list_image'>
 <a href="{{assets}}/data/index.html" target='_self'>
@@ -19,7 +27,6 @@ title: SPASE
 </a>
 </div>
 <div class='list_text'>
-
 <h3 class='list_title'><a href="data/index.html" target='_self'>Data Model</a></h3>
 <div class='list_description'>
 Get details of the SPASE <a href="data/model/index.html">Data Model</a>, which provides terms and syntax for uniform descriptions of Heliophysics resources, 
@@ -39,7 +46,6 @@ the <a href="data/schema/index.html">XML schema</a> documents used to validate S
 </a>
 </div>
 <div class='list_text'>
-
 <h3 class='list_title'><a href='{{assets}}/docs/index.html' target='_self'>Documents</a></h3>
 <div class='list_description'>
 Specifications for <a target="_blank" href="{{assets}}/docs/conventions/HDMC-Event-List-Specification-v1.0.3.pdf">event lists</a> (and catalogues) and 
@@ -60,7 +66,6 @@ with <a target="_blank" href="docs/conventions/SPASE-Parameter-Key-Formation-Pla
 </a>
 </div>
 <div class='list_text'>
-
 <h3 class='list_title'><a href='{{assets}}/tools/index.html' target='_self'>Tools</a></h3>
 <div class='list_description'>
 Reference implementations and <a href="{{assets}}/tools/resource/">tools</a> for working with SPASE metadata and the SPASE framework. 
@@ -80,7 +85,6 @@ new SPASE resource description, and explore the SPASE <a href="services/index.ht
 </a>
 </div>
 <div class='list_text'>
-
 <h3 class='list_title'><a href='https://school.spase-group.org/' target='_self'>School</a></h3>
 <div class='list_description'>
 The SPASE <a target="_blank" href="https://school.spase-group.org/">School</a> has tutorials that are designed to provide both introductory and in-depth information 
@@ -100,7 +104,6 @@ which can be used to share information and data, as well as construct Virtual Ob
 </a>
 </div>
 <div class='list_text'>
-
 <h3 class='list_title'><a href='{{assets}}/services' target='_self'>Services</a></h3>
 <div class='list_description'>
 SPASE provides a few community wide services which includes maintaining the list of <a href="{{assets}}/services/naming-authority.html">naming authorities</a> 
