--- a/site/layout/default.hbs
+++ b/site/layout/default.hbs
@@ -128,6 +128,7 @@ Space Physics Archive Search and Extract
 	<li><a href='{{assets}}/about.html' target='_self'>About</a>
 		<div class='global_subnav_container'>
 			<ul class='subnav'>
+				<li><a href='{{assets}}/spase-inside.html' target='_self'>SPASE Inside</a></li>
 				<li><a href='{{assets}}/connect.html' target='_self'>Connect With Us</a></li>
 				<li><a href='{{assets}}/news.html' target='_self'>News</a></li>
 			</ul>
