--- a/site/pages/news.hbs
+++ b/site/pages/news.hbs
@@ -33,8 +33,9 @@ Latest news and events.
 <div class='boxed'>
 <h2>Related Items</h2>
 <ul class='side_nav'>
-	<li><a href="about.html">About Us</a></li>
-	<li><a href="connect.html">Connect with Us</a></li>
+	<li><a href="{{assets}}/about.html">About Us</a></li>
+	<li><a href="{{assets}}/spase-inside.html">SPASE Inside</a></li>
+	<li><a href="{{assets}}/connect.html">Connect with Us</a></li>
 </ul>
 </div>
 </aside>
