Add ASWS to 'SPASE Inside' page, fix typo for CDPP.

--- a/site/pages/spase-inside.hbs
+++ b/site/pages/spase-inside.hbs
@@ -63,7 +63,7 @@ title: SPASE Inside
 			<h3  class='list_title'>Europe</h3>
 			<div class='list_description indent'>
 
-			   <div class="topic">Centre de Donnee la Physique des Plasmas (CDPP) (<a href="http://www.cdpp.eu/">http://www.cdpp.eu/</a>)<br/>
+			   <div class="topic">Centre de Donnee de la Physique des Plasmas (CDPP) (<a href="http://www.cdpp.eu/">http://www.cdpp.eu/</a>)<br/>
 			   Automated Multi-Dataset Analysis (AMDA) (<a href="http://amda.cdpp.eu/">http://amda.cdpp.eu/</a>)</div>
 			   <div class="indent">
 				  Provide integrated analysis of multi-point and multi-instrument data 
@@ -134,7 +134,25 @@ title: SPASE Inside
 
 			   <div class="topic">IUGONET (<a href="http://www.iugonet.org/en/mdformat.html">http://www.iugonet.org/en/mdformat.html</a>)</div>
 			   <div class="indent">
-				  Provide a unified metadata database and seamless data environment for ground-based observations of the upper atmosphere. acquired by a global network of radars, magnetometers, optical sensors, helioscopes, etc., and stored individual data bases.
+				  Provide a unified metadata database and seamless data environment for ground-based observations of the upper atmosphere acquired by a global network of radars, magnetometers, optical sensors, helioscopes, etc., and stored individual data bases.
+				</div>
+
+			</div>
+		</div>
+	</div>
+</li>
+
+<li>
+	<hr>
+	<div class='list_content'>
+		<div class='list_text'>
+			<h3  class='list_title'>Australia</h3>
+   
+			<div class='list_description indent'>
+
+			   <div class="topic">ASWS (<a href="http://www.sws.bom.gov.au/Geophysical">http://www.sws.bom.gov.au/Geophysical</a>)</div>
+			   <div class="indent">
+				  Australian Space Weather Service (ASWS) provides information on a range of space weather products and services.
 				</div>
 
 			</div>
