--- a/site/pages/spase-inside.hbs
+++ b/site/pages/spase-inside.hbs
@@ -41,12 +41,12 @@ title: SPASE Inside
 				  Heliophysics Division.
 			   </div>
 
-			   <div class="topic">HPDE Landing Page (<a href="https://hpde.io/">https://hpde.io/</a>)></div>
+			   <div class="topic top_space">HPDE Landing Page (<a href="https://hpde.io/">https://hpde.io/</a>)></div>
 			   <div class="indent">
 				  Formatted information about each registered resource in the HPDE repositories.
 			   </div> 
 
-			   <div class="topic">Heliophysics Data Portal (formerly VSPO) (<a href="http://heliophysicsdata.gsfc.nasa.gov/">http://heliophysicsdata.gsfc.nasa.gov/</a>)</div>
+			   <div class="topic top_space">Heliophysics Data Portal (formerly VSPO) (<a href="http://heliophysicsdata.gsfc.nasa.gov/">http://heliophysicsdata.gsfc.nasa.gov/</a>)</div>
 			   <div class="indent">
 				  Provides a quick and easy way to find and access a comprehensive set of NASA and other datasets, images, 
 				  movies, and associated services
@@ -63,37 +63,42 @@ title: SPASE Inside
 			<h3  class='list_title'>Europe</h3>
 			<div class='list_description indent'>
 
-			   <div class="topic">Centre de Donnee de la Physique des Plasmas (CDPP) (<a href="http://www.cdpp.eu/">http://www.cdpp.eu/</a>)<br/>
-			   Automated Multi-Dataset Analysis (AMDA) (<a href="http://amda.cdpp.eu/">http://amda.cdpp.eu/</a>)</div>
+			   <div class="topic">Centre de Donnee de la Physique des Plasmas (CDPP) (<a href="http://www.cdpp.eu/">http://www.cdpp.eu/</a>)</div>
 			   <div class="indent">
-				  Provide integrated analysis of multi-point and multi-instrument data 
-				  for case studies and statistical studies of plasmas in space physics.
+				   <div class="topic top_space">Automated Multi-Dataset Analysis (AMDA) (<a href="http://amda.cdpp.eu/">http://amda.cdpp.eu/</a>)</div>
+				   <div class="indent">
+					  Provide integrated analysis of multi-point and multi-instrument data 
+					  for case studies and statistical studies of plasmas in space physics.
+				   </div>
 			   </div>
 			   
-			   <div class="topic">German Research Centre for Geosciences (<a href="http://www.gfz-potsdam.de/portal/gfz/home">http://www.gfz-potsdam.de/portal/gfz/home</a>)<br/>
-			   Information System and Data Center for geoscientific data (http://isdc.gfz-potsdam.de/</a>)</div>
+			   <div class="topic top_space">German Research Centre for Geosciences (<a href="http://www.gfz-potsdam.de/portal/gfz/home">http://www.gfz-potsdam.de/portal/gfz/home</a>)</div>
 			   <div class="indent">
-				  An access point for all manner of geoscientific geodata, its corresponding metadata, scientific 
-				  documentation and software tools. The majority of the data and information, the portal currently 
-				  offers to the public, are global geomonitoring products such as satellite orbit and Earth gravity 
-				  field data as well as geomagnetic and atmospheric data for the exploration.
-			   </div>
-			   <div class="indent">
-				  Exploring Semantic web ontologies for use with reasoners and semantic searches.
-			   </div>
-
-			   <div class="topic">EU Framework 7 Projects</div>
-
-			   <div class="topic">near-Earth space data infrastructure for e-Science (ESPAS) (<a href="http://www.espas-fp7.eu/">http://www.espas-fp7.eu/</a>)</div>
-			   <div class="indent">
-				  An e-Infrastructure to support access to observations, modeling and prediction of the 
-				  near-Earth space environment extending from the Earth's atmosphere up to the outer radiation belts.
+				   <div class="topic top_space">Information System and Data Center for geoscientific data (<a href="http://isdc.gfz-potsdam.de/">http://isdc.gfz-potsdam.de/</a>)</div>
+				   <div class="indent">
+					  An access point for all manner of geoscientific geodata, its corresponding metadata, scientific 
+					  documentation and software tools. The majority of the data and information, the portal currently 
+					  offers to the public, are global geomonitoring products such as satellite orbit and Earth gravity 
+					  field data as well as geomagnetic and atmospheric data for the exploration.
+				   </div>
+				   <div class="indent">
+					  Exploring Semantic web ontologies for use with reasoners and semantic searches.
+				   </div>
 			   </div>
 
-			   <div class="topic">IMPEx (<a href="http://impex-fp7.oeaw.ac.at/">http://impex-fp7.oeaw.ac.at/</a>)</div>
+			   <div class="topic top_space">EU Framework 7 Projects</div>
 			   <div class="indent">
-				   An integrated interactive computational framework where data from 
-					  planetary missions will be interconnected with numerical models.
+				   <div class="topic top_space">near-Earth space data infrastructure for e-Science (ESPAS) (<a href="http://www.espas-fp7.eu/">http://www.espas-fp7.eu/</a>)</div>
+				   <div class="indent">
+					  An e-Infrastructure to support access to observations, modeling and prediction of the 
+					  near-Earth space environment extending from the Earth's atmosphere up to the outer radiation belts.
+				   </div>
+
+				   <div class="topic top_space">IMPEx (<a href="http://impex-fp7.oeaw.ac.at/">http://impex-fp7.oeaw.ac.at/</a>)</div>
+				   <div class="indent">
+					   An integrated interactive computational framework where data from 
+						  planetary missions will be interconnected with numerical models.
+				   </div>
 			   </div>
    
 			</div>
@@ -114,7 +119,7 @@ title: SPASE Inside
 				  Provides access to data from the Athabasca University Geophysical Observatory (AUGO).
 			   </div>
 			   
-			   <div class="topic">Canadian Space Science Data Portal (CSSDP) (<a href="https://cssdp.ca/">https://cssdp.ca/</a>)</div>
+			   <div class="topic top_space">Canadian Space Science Data Portal (CSSDP) (<a href="https://cssdp.ca/">https://cssdp.ca/</a>)</div>
 			   <div class="indent">
 				  Enable and simplify researcher access to space science analytic tools and data.
 			   </div>
