Change link from 'xmleditor' to 'editor'.

--- a/site/pages/index.hbs
+++ b/site/pages/index.hbs
@@ -69,7 +69,7 @@ with <a target="_blank" href="docs/conventions/SPASE-Parameter-Key-Formation-Pla
 <h3 class='list_title'><a href='{{assets}}/tools/index.html' target='_self'>Tools</a></h3>
 <div class='list_description'>
 Reference implementations and <a href="{{assets}}/tools/resource/">tools</a> for working with SPASE metadata and the SPASE framework. 
-You can <a href="https://validator.spase-group.org/">validate</a> SPASE product descriptions, <a href="{{assets}}/tools/xmleditor/">make and edit</a> 
+You can <a href="https://validator.spase-group.org/">validate</a> SPASE product descriptions, <a href="{{assets}}/tools/editor/index.html">make and edit</a> 
 new SPASE resource description, and explore the SPASE <a href="services/index.html">registries</a>. 
 </div>
 </div>
