--- a/site/pages/index.hbs
+++ b/site/pages/index.hbs
@@ -13,8 +13,8 @@ title: SPASE
 
 <li>
 <div class='list_content center top_tight'>
-<h3 class='list_title'>Announcements</h3>
-<div>2020-10-15: Version 2.3.2 of the SPASE <a href="data">Base model</a> is released.</div>
+<h1 class='list_title'>Announcements</h1>
+<div class='big_text'>2020-10-15: Version 2.3.2 of the SPASE <a href="data">Base model</a> is released.</div>
 </div>
 </li>
 
