--- a/site/pages/tools/editor/index.hbs
+++ b/site/pages/tools/editor/index.hbs
@@ -24,7 +24,7 @@ title: SPASE Editor
      There are two versions of the editor:
      <dl>
         <dt> <a href="http://xmleditor.spase-group.org/">base</a></dt><dd>Resource descriptions for observed data</dd>
-        <dt> <a href="http://xmleditor.spase-group.org/">simulation</a><dt><dd>Resource descriptions for simulations and models, plus generated results.</dd>
+        <dt> <a href="http://xmleditor.spase-group.org/?simulation=true">simulation</a><dt><dd>Resource descriptions for simulations and models, plus generated results.</dd>
      </dl>
    </p>
    <p>
