Have xmleditor and validator launch in new window, fix a few broken links.

--- a/site/layout/default.hbs
+++ b/site/layout/default.hbs
@@ -105,7 +105,7 @@ Space Physics Archive Search and Extract
 	<li><a class='dark' href='{{assets}}/tools/index.html' target='_self'>Tools</a>
 		<div class='global_subnav_container'>
 			<ul class='subnav'>
-				<li><a href='http://validate.spase-group.org/' target='_self'>Validator</a></li>
+				<li><a target='_blank' href='http://validator.spase-group.org/' target='_self'>Validator</a></li>
 				<li><a href='{{assets}}/tools/editor/index.html' target='_self'>Editor</a></li>
 				<li><a href='{{assets}}/tools/resource/index.html' target='_self'>Resource Tools</a></li>
 				<li><a href='{{assets}}/tools/registry/index.html' target='_self'>Registry Server</a></li>
