--- a/site/pages/data/model/history.hbs
+++ b/site/pages/data/model/history.hbs
@@ -18,7 +18,7 @@ title: SPASE Base Model History
 
 {{#each (sort baseModelHistory 'updated' false)}}
 	{{#if (isBreak) }}
-	<h4>Version: <b><a href="search.html?version={{Version}}">{{version}}</a></b></h4>
+	<h4>Version: <b><a href="search/index.html?version={{version}}">{{version}}</a></b></h4>
 	<table class="history">
 		<tr>
 		<th width=100px>Updated</th>
