--- a/site/pages/data/schema/index.hbs
+++ b/site/pages/data/schema/index.hbs
@@ -48,7 +48,7 @@ There exists an XML Schema document for each version of the SPASE data model.
 		<p>The <a target="_blank" href="../model/spase-{{draft.version}}-draft/index.html">current draft</a> 
 		(<a target="_blank" href="../model/spase-{{draft.version}}-draft/index.html">HTML</a>
 		 <a target="_blank" href="../model/spase-{{draft.version}}-draft.pdf">PDF</a>
-		 <a target="_blank" href="../schema/spase-{{draft.version}}--draft.xsd">XSD</a>),
+		 <a target="_blank" href="../schema/spase-{{draft.version}}-draft.xsd">XSD</a>),
 		 ),
 		version is {{draft.version}}, generated on: {{draft.released}}
 		</p>
