--- a/site/pages/docs/index.hbs
+++ b/site/pages/docs/index.hbs
@@ -36,7 +36,7 @@ Additional information on using SPASE metadata and tools can be found at the <a 
       <dd>Describes the Heliophysics Event List format which is a plain text data format with metadata embedded in comments.<br/>
 		<a href="conventions/sector_boundary_events_std.txt">Text Example</a> 
 		- <a href="conventions/sector_boundary_events_std.xml">VOTable Example</a></dd>
-	<dt><a href="uri_templates_v1.pdf">URI Template Standard</a></dt>
+	<dt><a href="conventions/uri_templates_v1.pdf">URI Template Standard</a></dt>
 		<dd>A specification for special fields which can be included in a URI to capture the file and directory naming 
 		conventions used to access data and images.</dd>
 </dl>
