--- a/site/pages/tools/editor/index.hbs
+++ b/site/pages/tools/editor/index.hbs
@@ -23,8 +23,8 @@ title: SPASE Editor
    <p>
      There are two versions of the editor:
      <dl>
-        <dt> <a href="http://xmleditor.spase-group.org/">base</a></dt><dd>Resource descriptions for observed data</dd>
-        <dt> <a href="http://xmleditor.spase-group.org/?simulation=true">simulation</a><dt><dd>Resource descriptions for simulations and models, plus generated results.</dd>
+        <dt> <a target='_blank' href="http://xmleditor.spase-group.org/">base</a></dt><dd>Resource descriptions for observed data</dd>
+        <dt> <a target='_blank' href="http://xmleditor.spase-group.org/?simulation=true">simulation</a><dt><dd>Resource descriptions for simulations and models, plus generated results.</dd>
      </dl>
    </p>
    <p>
