--- a/site/pages/spase-inside.hbs
+++ b/site/pages/spase-inside.hbs
@@ -41,15 +41,20 @@ title: SPASE Inside
 				  Heliophysics Division.
 			   </div>
 
-			   <div class="topic top_space">HPDE Landing Page (<a href="https://hpde.io/">https://hpde.io/</a>)></div>
+			   <div class="topic top_space">HPDE Landing Page (<a href="https://hpde.io/">https://hpde.io/</a>)</div>
 			   <div class="indent">
 				  Formatted information about each registered resource in the HPDE repositories.
 			   </div> 
 
-			   <div class="topic top_space">Heliophysics Data Portal (formerly VSPO) (<a href="http://heliophysicsdata.gsfc.nasa.gov/">http://heliophysicsdata.gsfc.nasa.gov/</a>)</div>
+			   <div class="topic top_space">Heliophysics Data Portal (<a href="http://heliophysicsdata.gsfc.nasa.gov/">http://heliophysicsdata.gsfc.nasa.gov/</a>)</div>
 			   <div class="indent">
 				  Provides a quick and easy way to find and access a comprehensive set of NASA and other datasets, images, 
-				  movies, and associated services
+				  movies, and associated services.
+			   </div>
+
+			   <div class="topic top_space">Virtual Wave Observatory (VWO) (<a href="https://vwo.nasa.gov/">https://vwo.nasa.gov/</a>)</div>
+			   <div class="indent">
+				  The VWO enables sharing of Heliophysics wave data and expert knowledge by making Heliophysics wave data searchable, understandable and usable by the scientific community.
 			   </div>
 		   </div>
 		</div>
