Update link NSSDC SPASE query page.

--- a/site/pages/spase-inside.hbs
+++ b/site/pages/spase-inside.hbs
@@ -57,7 +57,7 @@ title: SPASE Inside
 				  The VWO enables sharing of Heliophysics wave data and expert knowledge by making Heliophysics wave data searchable, understandable and usable by the scientific community.
 			   </div>
 			   
-			   <div class="topic top_space">NSSDC SPASE Query (<a href="https://nssdc.gsfc.nasa.gov/spase/ObservatoryQuery.jsp">https://nssdc.gsfc.nasa.gov/spase/ObservatoryQuery.jsp</a>)</div>
+			   <div class="topic top_space">NSSDC SPASE Query (<a href="https://nssdc.gsfc.nasa.gov/spase/">https://nssdc.gsfc.nasa.gov/spase/</a>)</div>
 			   <div class="indent">
 				  Search for select Person, Observatory and Instrument descriptions.
 			   </div>
