--- a/site/pages/spase-inside.hbs
+++ b/site/pages/spase-inside.hbs
@@ -35,29 +35,29 @@ title: SPASE Inside
 			<h3  class='list_title'>United States: NASA's Heliophysics division</h3>
 			<div class='list_description indent'>
 
-			   <div class="topic">HPDE Repository (<a href="https://github.com/hpde/">https://github.com/hpde/</a>)</div>
+			   <div class="topic">HPDE Repository (<a target="_blank" href="https://github.com/hpde/">https://github.com/hpde/</a>)</div>
 			   <div class="indent">
 				  Provides comprehensive access to all registered metadata in NASA's 
 				  Heliophysics Division.
 			   </div>
 
-			   <div class="topic top_space">HPDE Landing Page (<a href="https://hpde.io/">https://hpde.io/</a>)</div>
+			   <div class="topic top_space">HPDE Landing Page (<a target="_blank" href="https://hpde.io/">https://hpde.io/</a>)</div>
 			   <div class="indent">
 				  Formatted information about each registered resource in the HPDE repositories.
 			   </div> 
 
-			   <div class="topic top_space">Heliophysics Data Portal (<a href="http://heliophysicsdata.gsfc.nasa.gov/">http://heliophysicsdata.gsfc.nasa.gov/</a>)</div>
+			   <div class="topic top_space">Heliophysics Data Portal (<a target="_blank" href="http://heliophysicsdata.gsfc.nasa.gov/">http://heliophysicsdata.gsfc.nasa.gov/</a>)</div>
 			   <div class="indent">
 				  Provides a quick and easy way to find and access a comprehensive set of NASA and other datasets, images, 
 				  movies, and associated services.
 			   </div>
 
-			   <div class="topic top_space">Virtual Wave Observatory (VWO) (<a href="https://vwo.nasa.gov/">https://vwo.nasa.gov/</a>)</div>
+			   <div class="topic top_space">Virtual Wave Observatory (VWO) (<a target="_blank" href="https://vwo.nasa.gov/">https://vwo.nasa.gov/</a>)</div>
 			   <div class="indent">
 				  The VWO enables sharing of Heliophysics wave data and expert knowledge by making Heliophysics wave data searchable, understandable and usable by the scientific community.
 			   </div>
 			   
-			   <div class="topic top_space">NSSDC SPASE Query (<a href="https://nssdc.gsfc.nasa.gov/spase/">https://nssdc.gsfc.nasa.gov/spase/</a>)</div>
+			   <div class="topic top_space">NSSDC SPASE Query (<a target="_blank" href="https://nssdc.gsfc.nasa.gov/spase/">https://nssdc.gsfc.nasa.gov/spase/</a>)</div>
 			   <div class="indent">
 				  Search for select Person, Observatory and Instrument descriptions.
 			   </div>
@@ -73,16 +73,16 @@ title: SPASE Inside
 			<h3  class='list_title'>Europe</h3>
 			<div class='list_description indent'>
 
-			   <div class="topic">Centre de Donnee de la Physique des Plasmas (CDPP) (<a href="http://www.cdpp.eu/">http://www.cdpp.eu/</a>)</div>
+			   <div class="topic">Centre de Donnee de la Physique des Plasmas (CDPP) (<a target="_blank" href="http://www.cdpp.eu/">http://www.cdpp.eu/</a>)</div>
 			   <div class="indent">
-				   <div class="topic top_space">Automated Multi-Dataset Analysis (AMDA) (<a href="http://amda.cdpp.eu/">http://amda.cdpp.eu/</a>)</div>
+				   <div class="topic top_space">Automated Multi-Dataset Analysis (AMDA) (<a target="_blank" href="http://amda.cdpp.eu/">http://amda.cdpp.eu/</a>)</div>
 				   <div class="indent">
 					  Provide integrated analysis of multi-point and multi-instrument data 
 					  for case studies and statistical studies of plasmas in space physics.
 				   </div>
 			   </div>
 			   
-			   <div class="topic top_space">German Research Centre for Geosciences (<a href="http://www.gfz-potsdam.de/portal/gfz/home">http://www.gfz-potsdam.de/portal/gfz/home</a>)</div>
+			   <div class="topic top_space">German Research Centre for Geosciences (<a target="_blank" href="http://www.gfz-potsdam.de/portal/gfz/home">http://www.gfz-potsdam.de/portal/gfz/home</a>)</div>
 			   <div class="indent">
 				   <div class="topic top_space">Information System and Data Center for geoscientific data (<a href="http://isdc.gfz-potsdam.de/">http://isdc.gfz-potsdam.de/</a>)</div>
 				   <div class="indent">
@@ -98,13 +98,13 @@ title: SPASE Inside
 
 			   <div class="topic top_space">EU Framework 7 Projects</div>
 			   <div class="indent">
-				   <div class="topic top_space">near-Earth space data infrastructure for e-Science (ESPAS) (<a href="https://www.espas-fp7.eu/portal/">https://www.espas-fp7.eu/portal/</a>)</div>
+				   <div class="topic top_space">near-Earth space data infrastructure for e-Science (ESPAS) (<a target="_blank" href="https://www.espas-fp7.eu/portal/">https://www.espas-fp7.eu/portal/</a>)</div>
 				   <div class="indent">
 					  An e-Infrastructure to support access to observations, modeling and prediction of the 
 					  near-Earth space environment extending from the Earth's atmosphere up to the outer radiation belts.
 				   </div>
 
-				   <div class="topic top_space">IMPEx (<a href="http://impex-fp7.oeaw.ac.at/">http://impex-fp7.oeaw.ac.at/</a>)</div>
+				   <div class="topic top_space">IMPEx (<a target="_blank" href="http://impex-fp7.oeaw.ac.at/">http://impex-fp7.oeaw.ac.at/</a>)</div>
 				   <div class="indent">
 					   An integrated interactive computational framework where data from 
 						  planetary missions will be interconnected with numerical models.
@@ -124,12 +124,12 @@ title: SPASE Inside
    
 			<div class='list_description indent'>
 			   
-			   <div class="topic">AUTUMN Virtual Magnetic Observatory (<a href="http://autumn.athabascau.ca/">http://autumn.athabascau.ca/</a>)</div>
+			   <div class="topic">AUTUMN Virtual Magnetic Observatory (<a target="_blank" href="http://autumn.athabascau.ca/">http://autumn.athabascau.ca/</a>)</div>
 			   <div class="indent">
 				  Provides access to data from the Athabasca University Geophysical Observatory (AUGO).
 			   </div>
 			   
-			   <div class="topic top_space">Canadian Space Science Data Portal (CSSDP) (<a href="https://cssdp.ca/">https://cssdp.ca/</a>)</div>
+			   <div class="topic top_space">Canadian Space Science Data Portal (CSSDP) (<a target="_blank" href="https://cssdp.ca/">https://cssdp.ca/</a>)</div>
 			   <div class="indent">
 				  Enable and simplify researcher access to space science analytic tools and data.
 			   </div>
@@ -147,7 +147,7 @@ title: SPASE Inside
    
 			<div class='list_description indent'>
 
-			   <div class="topic">IUGONET (<a href="http://www.iugonet.org/en/mdformat.html">http://www.iugonet.org/en/mdformat.html</a>)</div>
+			   <div class="topic">IUGONET (<a target="_blank" href="http://www.iugonet.org/en/mdformat.html">http://www.iugonet.org/en/mdformat.html</a>)</div>
 			   <div class="indent">
 				  Provide a unified metadata database and seamless data environment for ground-based observations of the upper atmosphere acquired by a global network of radars, magnetometers, optical sensors, helioscopes, etc., and stored individual data bases.
 				</div>
@@ -165,7 +165,7 @@ title: SPASE Inside
    
 			<div class='list_description indent'>
 
-			   <div class="topic">ASWS (<a href="http://www.sws.bom.gov.au/Geophysical">http://www.sws.bom.gov.au/Geophysical</a>)</div>
+			   <div class="topic">ASWS (<a target="_blank" href="http://www.sws.bom.gov.au/Geophysical">http://www.sws.bom.gov.au/Geophysical</a>)</div>
 			   <div class="indent">
 				  Australian Space Weather Service (ASWS) provides information on a range of space weather products and services.
 				</div>
