Add CNES to naming authority page.

--- a/site/pages/services/naming-authority.hbs
+++ b/site/pages/services/naming-authority.hbs
@@ -29,6 +29,12 @@ title: SPASE Naming Authority
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/CCMC">https://github.com/hpde/CCMC</a>
 				</td></tr>
 					
+				<tr><td  valign="top">CNES</td><td>Centre National d'Etudes Spatiales<br>
+				Assigns resource IDs for data available from the Centre National d'Etudes Spatiales (CNES).<br>
+				Website: <a class="ext" href="https://cnes.fr/en">https://cnes.fr/en</a><br>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/CNES">https://github.com/hpde/CNES</a>
+				</td></tr>
+					
 				<tr><td  valign="top">CSSDP</td><td>Canadian Space Science Data Portal (CSSDP)<br>
 				Assigns resource IDs for data registered in the Canadian Space Science Data Portal (CSSDP).<br>
 				Website: <a class="ext" href="http://www.cssdp.ca/">http://www.cssdp.ca/</a><br>
