--- a/site/pages/spase-inside.hbs
+++ b/site/pages/spase-inside.hbs
@@ -82,7 +82,7 @@ title: SPASE Inside
 				   </div>
 			   </div>
 			   
-			   <div class="topic top_space">German Research Centre for Geosciences (<a target="_blank" href="http://www.gfz-potsdam.de/portal/gfz/home">http://www.gfz-potsdam.de/portal/gfz/home</a>)</div>
+			   <div class="topic top_space">German Research Centre for Geosciences (<a target="_blank" href="https://www.gfz-potsdam.de/en/home/">https://www.gfz-potsdam.de/en/home/</a>)</div>
 			   <div class="indent">
 				   <div class="topic top_space">Information System and Data Center for geoscientific data (<a href="http://isdc.gfz-potsdam.de/">http://isdc.gfz-potsdam.de/</a>)</div>
 				   <div class="indent">
@@ -129,7 +129,7 @@ title: SPASE Inside
 				  Provides access to data from the Athabasca University Geophysical Observatory (AUGO).
 			   </div>
 			   
-			   <div class="topic top_space">Canadian Space Science Data Portal (CSSDP) (<a target="_blank" href="https://cssdp.ca/">https://cssdp.ca/</a>)</div>
+			   <div class="topic top_space">Canadian Space Science Data Portal (CSSDP) (<a target="_blank" href="https://asc-csa.gc.ca/eng/open-data/access-the-data.asp">https://asc-csa.gc.ca/eng/open-data/access-the-data.asp</a> and <a target="_blank" href="https://www.spaceweather.gc.ca/data-donnee/sd-en.php">https://www.spaceweather.gc.ca/data-donnee/sd-en.php</a>)</div>
 			   <div class="indent">
 				  Enable and simplify researcher access to space science analytic tools and data.
 			   </div>
@@ -147,7 +147,7 @@ title: SPASE Inside
    
 			<div class='list_description indent'>
 
-			   <div class="topic">IUGONET (<a target="_blank" href="http://www.iugonet.org/en/mdformat.html">http://www.iugonet.org/en/mdformat.html</a>)</div>
+			   <div class="topic">IUGONET (<a target="_blank" href="http://www.iugonet.org/product/">http://www.iugonet.org/product/</a>)</div>
 			   <div class="indent">
 				  Provide a unified metadata database and seamless data environment for ground-based observations of the upper atmosphere acquired by a global network of radars, magnetometers, optical sensors, helioscopes, etc., and stored individual data bases.
 				</div>
