--- a/site/pages/services/naming-authority.hbs
+++ b/site/pages/services/naming-authority.hbs
@@ -53,6 +53,12 @@ title: SPASE Naming Authority
 				Metadata Repository: <a class="ext" href="https://github.com/hpde/ESA">https://github.com/hpde/ESA</a>
 				</td></tr>
 					
+				<tr><td  valign="top">INAF</td><td>Istituto Nazionale Di Astrofisica (National Institue for Astrophysics)<br>
+				Assigns resource IDs for data available from the Istituto Nazionale Di Astrofisica(INAF).<br>
+				Website: <a class="ext" href="http://www.inaf.it/">http://www.inaf.it/</a><br>
+				Metadata Repository: <a class="ext" href="https://github.com/hpde/INAF">https://github.com/hpde/INAF</a>
+				</td></tr>
+					
 				<tr><td  valign="top">ISWI</td><td>International Space Weather Initiative (ISWI)<br>
 				Assigns resource IDs for data available from the International Space Weather Initiative (ISWI).<br>
 				Website: <a class="ext" href="http://www.iswi-secretariat.org/">http://www.iswi-secretariat.org/</a><br>
